# parakeet-unified-en-0.6b-c

./: .gitignore  CMakeLists.txt  README.md  download_weights.py  extract_weights.py  requirements.txt
csrc/: Makefile  blas.c  blas.h  decoder.c  encoder.c  main.c  mel.c  parakeet.h  sentencepiece.c  tensor_ops.c  threadpool.c  threadpool.h  wav.c  weights.c
